code review remarks

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -819,7 +819,8 @@
     "CreateVoltageLevel": "Create a voltage level",
     "ModifyVoltageLevel": "Modify a voltage level",
     "Substation": "Substation",
-    "BusBarSections": "Busbar reference section",
+    "BusBarSections": "Busbar section",
+    "BusBarSectionsReference": "Busbar reference section",
     "BusBarCount": "Busbar Count",
     "numberOfSections": "Section Count",
     "BusBarSectionID": "ID",
