--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -812,7 +812,8 @@
     "CreateVoltageLevel": "Créer un poste",
     "ModifyVoltageLevel": "Modifier un poste",
     "Substation": "Site",
-    "BusBarSections": "Section de jeu de barres de référence",
+    "BusBarSections": "Section de jeu de barres",
+    "BusBarSectionsReference": "Section de jeu de barres de référence",
     "BusBarCount": "Nb de barres",
     "numberOfSections": "Nb de sections",
     "BusBarSectionID": "ID",
