Add new fields in loadflow results (#3157)
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -90,9 +90,10 @@
     "upComingOverloadDuration": "Upcoming overload",
     "actualOverloadDuration": "Actual overload",
     "CurrentViolationValue": "Calculated current (A)",
+    "PatlLimitValue": "PATL (A)",
     "CurrentViolationLimit": "Limit value (A)",
-    "VoltageViolationLimit": "Limit value (kV)",
-    "VoltageViolationValue": "Calculated value (kV)",
+    "VoltageViolationLimit": "Voltage limit (kV)",
+    "VoltageViolationValue": "Calculated voltage (kV)",
     "load": "load",
     "Load": "Load",
     "ManuallyRefreshGeoData": "Update map",
@@ -378,9 +379,12 @@
     "LimitSide": "Side",
     "LimitName": "Limit name",
     "LimitNameCurrentViolation": "Limit name",
+    "NextLimitNameCurrentViolation": "Next limit name",
     "Limit_name": "Limit name",
     "CalculatedValue": "Calculated value (A or kV)",
     "OverloadedEquipment": "Equipment",
+    "OverloadedEquipmentBus": "Bus",
+    "OverloadedEquipmentVoltageLevel": "Voltage level",
     "PermanentLimitName": "IST",
     "LimitAcceptableDuration": "Duration",
     "Overload": "Overload",
@@ -394,6 +398,8 @@
     "yes": "Yes",
     "no": "No",
     "Loading": "Load (%)",
+    "LimitLoading": "Load (% limit)",
+    "PatlLoading": "Load (% PATL)",
     "undefinedValue": "undefined",
 
     "HighVoltageLimit": "High voltage limit",
