--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -87,12 +87,13 @@
     "limit": "limite",
     "Limit": "Valeur du seuil (A ou kV)",
     "LimitLabel": "Limite (A)",
-    "upComingOverloadDuration": "Surcharge imminente",
-    "actualOverloadDuration": "Surcharge effective",
+    "upComingOverloadDuration": "Tempo imminente",
+    "actualOverloadDuration": "Tempo effective",
     "CurrentViolationValue": "Intensité calculée (A)",
-    "CurrentViolationLimit": "Valeur du seuil (A)",
-    "VoltageViolationLimit": "Valeur du seuil (kV)",
-    "VoltageViolationValue": "Valeur calculée (kV)",
+    "PatlLimitValue": "IST (A)",
+    "CurrentViolationLimit": "Limite d'intensité (A)",
+    "VoltageViolationLimit": "Limite de tension (kV)",
+    "VoltageViolationValue": "Tension calculée (kV)",
     "load": "transit",
     "Load": "Transit",
     "ManuallyRefreshGeoData": "Mettre à jour la carte",
@@ -376,9 +377,12 @@
     "LimitSide": "Côté",
     "LimitName": "Nom du seuil",
     "Limit_name": "Seuil",
-    "LimitNameCurrentViolation": "Nom du seuil",
+    "LimitNameCurrentViolation": "Nom de la limite",
+    "NextLimitNameCurrentViolation": "Nom de la limite suivante",
     "CalculatedValue": "Valeur calculée (A ou kV)",
     "OverloadedEquipment": "Ouvrage",
+    "OverloadedEquipmentBus": "Nœud électrique",
+    "OverloadedEquipmentVoltageLevel": "Poste",
     "PermanentLimitName": "IST",
     "Permanent": "Permanent",
     "LimitAcceptableDuration": "Durée",
@@ -394,6 +398,8 @@
     "yes": "Oui",
     "no": "Non",
     "Loading": "Charge (%)",
+    "LimitLoading": "Charge (% limite)",
+    "PatlLoading": "Charge (% IST)",
     "undefinedValue": "indéfini",
 
     "HighVoltageLimit": "Limite tension haute",
