Fix: consolidate drawing mode functionality
Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1133,6 +1133,7 @@
     "NetworkEquipmentNotFound": "The equipment \"{equipmentId}\" does not exist in this network",
     "SLDOpenedInTheGrid": "The {diagramType} \"{equipmentId}\" was opened in the image grid",
     "NADOpenedInTheGrid": "The network area diagram \"{elementId}\" was opened in the image grid",
+    "generatedNADOpenedInTheGrid": "The generated network area diagram was opened in the image grid",
 
     "CatalogButtonTooltip": "Open catalog",
     "LineTypesCatalogDialogTitle": "Define line segments",
