fix: link to backend + translations
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1584,5 +1584,8 @@
     "loadflowModificationsTapOut": "Prise en sortie",
     "loadflowModificationsSectionCountIn": "Gradin en entrée",
     "loadflowModificationsSectionCountOut": "Gradin en sortie",
-    "loadflowModifications": "Modification calcul de répartition"
+    "loadflowModifications": "Modification calcul de répartition",
+    "loadFlowModificationDetails": "Détails",
+    "PHASE_TAP": "Déphaseur",
+    "RATIO_TAP": "Régleur"
 }
