--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1588,5 +1588,8 @@
     "loadflowModificationsTapOut": "Final tap",
     "loadflowModificationsSectionCountIn": "Initial section",
     "loadflowModificationsSectionCountOut": "Final section",
-    "loadflowModifications": "Loadflow modification"
+    "loadflowModifications": "Loadflow modification",
+    "loadFlowModificationDetails":"Details",
+    "PHASE_TAP": "Phase",
+    "RATIO_TAP": "Ratio"
 }
