--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1586,5 +1586,5 @@
     "BUILT_WITH_ERROR": "Errors",
     "NOT_BUILT": "Not built",
     "allBusbarSections": "All",
-    "allOptionHelperText": "Busbars have different number of sections"
+    "allOptionHelperText": "Busbars have different sections (number or index)"
 }
