all buses sections implementation (#3146)
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -825,7 +825,8 @@
     "CreateVoltageLevel": "Create a voltage level",
     "ModifyVoltageLevel": "Modify a voltage level",
     "Substation": "Substation",
-    "BusBarSections": "Busbar reference section",
+    "BusBarSections": "Busbar section",
+    "BusBarSectionsReference": "Busbar reference section",
     "BusBarCount": "Busbar Count",
     "numberOfSections": "Section Count",
     "BusBarSectionID": "ID",
@@ -1583,5 +1584,7 @@
     "BUILT": "Built",
     "BUILT_WITH_WARNING": "Warnings",
     "BUILT_WITH_ERROR": "Errors",
-    "NOT_BUILT": "Not built"
+    "NOT_BUILT": "Not built",
+    "allBusbarSections": "All",
+    "allOptionHelperText": "Busbars have different sections (number or index)"
 }
