--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1042,7 +1042,7 @@
     "NoSpreadsheets": "You have no spreadsheets, please create one",
 
     "SearchEquipmentField": "Search for a field",
-    "EquipmentSchemaPopoverSchema": "Ouvre la liste des champs pour l'équipement associé à la feuille, la list peut également être ouverte via une double pression de la touche Shift du clavier",
+    "EquipmentSchemaPopoverSchema": "Opens the list of fields for the equipment associated with the sheet. The list can also be opened by pressing the Shift key on the keyboard twice.",
     "FetchingEquipmentSchemaError": "An error occurred while fetching equipment schema",
 
     "depth": "Depth: ",
