Adjust some labels in modification filters (#3159)
Signed-off-by: Igor PIROG <igor.pirog@rte-france.com>
Co-authored-by: basseche <bassel.el-cheikh_externe@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -541,7 +541,9 @@
     "Auxiliary": "Auxiliary",
     "Fictitious": "Fictitious",
     "ActivePowerText": "Active power",
+    "ActivePowerSetPointText": "Active power setpoint",
     "ReactivePowerText": "Reactive power",
+    "ReactivePowerSetPointText": "Reactive power setpoint",
     "BusBarBus": "Bus bar section / bus",
     "Buses": "Buses",
     "Magnitude": "Voltage magnitude",
@@ -696,7 +698,7 @@
     "Droop": "Droop",
     "PlannedActivePowerSetPointForm": "Planning active power set point",
     "plannedActivePowerSetPoint": "Planning P (MW)",
-    "MarginalCost": "Cost",
+    "MarginalCost": "Generation dispatch cost",
     "plannedOutageRate": "Planning outage rate",
     "forcedOutageRate": "Forced outage rate",
     "MinActivePowerMustBeLessOrEqualToMaxActivePower": "Minimum active power value must be less than or equal to maximum active power value",
