wip display and SLD link OK, todo filter/sort
Signed-off-by: David BRAQUART <david.braquart@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -365,7 +365,8 @@
     "ShortCircuitAnalysisTabAllBuses": "All buses",
     "OneBusShortCircuitAnalysis": "One bus short circuit analysis",
     "startSensitivityAnalysisError": "An error occurred while executing the sensitivity analysis",
-    "IDNode": "ID bus",
+    "IDNode": "Bus",
+    "busVoltageLevel": "Voltage level",
     "IscKA": "Isc (kA)",
     "IscMinKA": "Isc min (kA)",
     "IscMaxKA": "Isc max (kA)",
