--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -363,7 +363,8 @@
     "ShortCircuitAnalysisTabOneBus": "Unitaire",
     "ShortCircuitAnalysisTabAllBuses": "Réseau",
     "OneBusShortCircuitAnalysis": "Analyse de court-circuit unitaire",
-    "IDNode": "ID nœud",
+    "IDNode": "Nœud électrique",
+    "busVoltageLevel": "Poste",
     "IscKA": "Icc (kA)",
     "IscMinKA": "Icc min (kA)",
     "IscMaxKA": "IMACC (kA)",
