refactor(GridLayoutPanel): rename 'diagrams' folder to 'grid-layout' rename `DiagramGridLayout` component to `GridLayoutPanel` and css, translation etc associated
Signed-off-by: sBouzols <sylvain.bouzols@gmail.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1510,8 +1510,8 @@
     "currentStatus": "Modified status",
     "Open": "Open",
     "Closed": "Closed",
-    "DiagramGridLayout": "Diagram grid layout",
-    "DiagramGridLayoutAndTree": "Diagram grid layout and tree",
+    "GridLayoutPanel": "Grid layout panel",
+    "GridLayoutPanelAndTree": "Grid layout panel and tree",
 
     "CREATE_COUPLING_DEVICE": "Add a coupling device",
     "CreateVoltageLevelSection": "Add busbar section",
@@ -1555,8 +1555,8 @@
     "AddNewCard": "Images",
     "Display": "Display",
     "SaveGridLayout": "Save",
-    "diagramGridLayoutSaveError": "An error occurred while saving the diagram grid layout",
-    "diagramGridLayoutSaveSuccess": "Diagram grid layout saved successfully",
+    "GridLayoutPanelSaveError": "An error occurred while saving the grid layout panel",
+    "GridLayoutPanelSaveSuccess": "Grid layout panel saved successfully",
     "MaxNumberOfNadDiagramsReached": "You need to close at least one network area diagram to open a new one",
     "NoMatch": "No match",
     "Rows": "row",
