--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1583,5 +1583,7 @@
     "NOT_BUILT": "Non réalisé",
     "allBusbarSections": "Tous",
     "allOptionHelperText": "Tous les jeux de barres n'ont pas les memes sections (index et nombre)",
-    "MOVE_VOLTAGE_LEVEL_FEEDER_BAYS": "Déplacer les départs"
+    "MOVE_VOLTAGE_LEVEL_FEEDER_BAYS": "Déplacer les départs",
+    "TOP": "HAUT",
+    "BOTTOM": "BAS"
 }
