--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -56,6 +56,7 @@
     "studyNotFound": "L'étude avec l'identifiant \"{studyUuid}\" n'a pas été trouvée",
     "svgNotFound": "L'image poste n'a pas été trouvée : {error}; {svgUrl}",
     "svgLoadingFail": "L'image n'a pas pu être chargée",
+    "svgConfiguredModeFailed": "Les positions configurées n'ont pas été initialisées. Vous devez modifier le paramétrage d'initialisation des images nodales de la zone.",
     "networkLoadingFail": "Le réseau de l'étude avec l'identifiant \"{studyUuid}\" n'a pas pu être chargé",
     "geoDataLoadingFail": "Erreur lors du chargement des données géographiques.",
 
@@ -518,8 +519,8 @@
     "removeNode": "Supprimer",
     "unbuildNode": "Déréaliser",
     "exportCaseOnNode": "Exporter",
-    "ConstructionNode":"Créer un nœud de construction",
-    "SecurityNode":"Créer un nœud de sécurité",
+    "ConstructionNode": "Créer un nœud de construction",
+    "SecurityNode": "Créer un nœud de sécurité",
     "NetworkModificationTreeLoadError": "Une erreur est survenue lors du chargement de l'arbre de modifications de réseau",
     "MapEquipmentsLoadError": "Une erreur est survenue lors du chargement des données de l'image réseau",
     "StudyUnrecoverableStateRecreate": "Votre étude a rencontré un problème et a été recréée à partir des données initiales",
@@ -1030,7 +1031,7 @@
     "cutNetworkModificationNode": "Couper",
     "pasteNetworkModificationNode": "Coller",
 
-    "cancelCutNetworkModificationNode": "Annuler couper", 
+    "cancelCutNetworkModificationNode": "Annuler couper",
     "NetworkModificationSubtree": "Sous-arbre",
     "copyNetworkModificationSubtree": "Copier",
     "pasteNetworkModificationSubtree": "Coller",
