Loadflow modification dialog (#3136)
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1590,5 +1590,13 @@
     "allBusbarSections": "All",
     "allOptionHelperText": "Busbars have different sections (number or index)",
     "enableNavigationSync" : "Enable multi-tab tree navigation",
-    "disableNavigationSync" : "Disable multi-tab tree navigation"
+    "disableNavigationSync" : "Disable multi-tab tree navigation",
+    "loadflowModificationsTapIn": "Initial tap",
+    "loadflowModificationsTapOut": "Final tap",
+    "loadflowModificationsSectionCountIn": "Initial section",
+    "loadflowModificationsSectionCountOut": "Final section",
+    "loadflowModifications": "Loadflow modification",
+    "loadFlowModificationDetails":"Details",
+    "PHASE_TAP": "Phase",
+    "RATIO_TAP": "Ratio"
 }
