--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1586,5 +1586,13 @@
     "allBusbarSections": "Tous",
     "allOptionHelperText": "Tous les jeux de barres n'ont pas les memes sections (index et nombre)",
     "enableNavigationSync": "Activer la navigation dans l'arbre en multi-onglets",
-    "disableNavigationSync": "Désactiver la navigation dans l'arbre en multi-onglets"
+    "disableNavigationSync": "Désactiver la navigation dans l'arbre en multi-onglets",
+    "loadflowModificationsTapIn": "Prise en entrée",
+    "loadflowModificationsTapOut": "Prise en sortie",
+    "loadflowModificationsSectionCountIn": "Gradin en entrée",
+    "loadflowModificationsSectionCountOut": "Gradin en sortie",
+    "loadflowModifications": "Modification calcul de répartition",
+    "loadFlowModificationDetails": "Détails",
+    "PHASE_TAP": "Déphaseur",
+    "RATIO_TAP": "Régleur"
 }
