--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1133,6 +1133,7 @@
 
     "SLDOpenedInTheGrid": "Le {diagramType} \"{equipmentId}\" a été ouvert dans la grille des images",
     "NADOpenedInTheGrid": "L'image nodale de zone \"{elementId}\" a été ouverte dans la grille des images",
+    "generatedNADOpenedInTheGrid": "L'image nodale de zone générée a été ouverte dans la grille des images",
 
     "dialog.button.leave": "Quitter",
 
