Replace a NAD with another in the same card (#3207)
Signed-off-by: BOUTIER Charly <charly.boutier@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1191,6 +1191,7 @@
     "elementSelection": "Element selection",
     "addNetworkModification": "Add a network modification",
     "importFromGridExplore": "Import from GridExplore",
+    "importAndReplaceFromGridExplore": "Import and replace from GridExplore",
     "SaveToGridexplore": "Save to GridExplore",
     "SaveToGridexploreError": "An error occurred while saving to GridExplore",
     "diagramConfigCreationMsg": "Network area diagram created in {directory}",
