--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1510,8 +1510,8 @@
     "currentStatus": "État modifié",
     "Open": "Ouvert",
     "Closed": "Fermé",
-    "DiagramGridLayout": "Grille des diagrammes",
-    "DiagramGridLayoutAndTree": "Grille des diagrammes et arbre décisionnel",
+    "GridLayoutPanel": "Grille des images",
+    "GridLayoutPanelAndTree": "Grille des images et arbre décisionnel",
 
     "CREATE_COUPLING_DEVICE": "Ajouter un couplage ou un omnibus",
     "CreateVoltageLevelSection": "Ajouter un tronçon ou une section",
@@ -1554,8 +1554,8 @@
     "AddNewCard": "Images",
     "Display": "Affichage",
     "SaveGridLayout": "Enregistrer",
-    "diagramGridLayoutSaveError": "Une erreur est survenue lors de l'enregistrement de la grille du diagramme",
-    "diagramGridLayoutSaveSuccess": "La grille des diagrammes a été enregistrée avec succès",
+    "GridLayoutPanelSaveError": "Une erreur est survenue lors de l'enregistrement de la grille du diagramme",
+    "GridLayoutPanelSaveSuccess": "La grille des diagrammes a été enregistrée avec succès",
     "MaxNumberOfNadDiagramsReached": "Vous devez fermer au moins une image nodale existante pour en ouvrir une nouvelle",
     "NoMatch": "Pas de correspondance",
     "Rows": "ligne",
