--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1548,6 +1548,8 @@
     "expandAllVoltageLevels": "Expand all voltage levels",
     "addVoltageLevel": "Add a voltage level",
     "hide": "Hide",
+    "hideLabels": "Hide labels in Edit mode",
+    "showLabels": "Show labels",
     "CreateSubstationInVoltageLevelIdenticalId": "Voltage Level ID can not match Substation ID",
     "labeledGroupSecurity": "Security",
     "selectedOperationalLimitsGroup1": "Active limit set on side 1",
