--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1544,7 +1544,7 @@
     "expandAllVoltageLevels": "Étendre tous les postes",
     "addVoltageLevel": "Ajouter un poste",
     "hide": "Masquer",
-    "hideLabels": "Masquer les libellés en mode Édition",
+    "hideLabels": "Masquer les libellés en mode edition",
     "showLabels": "Afficher les libellés",
     "CreateSubstationInVoltageLevelIdenticalId": "L'ID du poste doit être différent de celui du site",
     "labeledGroupSecurity": "Sécurité",
