Show an error if too many voltage levels are in a NAD
Signed-off-by: BOUTIER Charly <charly.boutier@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1547,6 +1547,7 @@
     "expand": "Expand",
     "expandAllVoltageLevels": "Expand all voltage levels",
     "addVoltageLevel": "Add a voltage level",
+    "tooManyVoltageLevels": "Too many voltage levels",
     "hide": "Hide",
     "hideLabels": "Hide labels in edit mode",
     "showLabels": "Show labels",
