--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1543,6 +1543,7 @@
     "expand": "Étendre",
     "expandAllVoltageLevels": "Étendre tous les postes",
     "addVoltageLevel": "Ajouter un poste",
+    "tooManyVoltageLevels": "Trop de postes",
     "hide": "Masquer",
     "hideLabels": "Masquer les libellés en mode edition",
     "showLabels": "Afficher les libellés",
