Add new fields to NmK security analysis results (#3225)
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -86,7 +86,7 @@
     "NominalVoltage": "Nominal voltage",
     "I_(A)": "I (A)",
     "limit": "limit",
-    "Limit": "Limit value (A or kV)",
+    "LimitLabelAOrKv": "Limit (A or kV)",
     "LimitLabel": "Limit (A)",
     "upComingOverloadDuration": "Upcoming overload",
     "actualOverloadDuration": "Actual overload",
@@ -378,7 +378,6 @@
     "ViolationType": "Violation type",
     "Bus": "Bus",
     "LimitSide": "Side",
-    "LimitName": "Limit name",
     "LimitNameCurrentViolation": "Limit name",
     "NextLimitNameCurrentViolation": "Next limit name",
     "Limit_name": "Limit name",
@@ -393,6 +392,7 @@
     "Key": "Key",
     "Value": "Value",
     "ContingencyId": "Contingency ID",
+    "Contingency": "Contingency",
     "ComputationStatus": "Status",
     "true": "true",
     "false": "false",
@@ -447,11 +447,10 @@
     "SmartWithVerticalCompactionSubstationLayout": "Smart with vertical compaction",
     "openSubstation": "Open the substation",
 
-    "ConstraintsFromContingencies": "Contingencies -> constraints",
-    "ContingenciesFromConstraints": "Constraints -> contingencies",
+    "ConstraintsFromContingencies": "Contingencies -> violations",
+    "ContingenciesFromConstraints": "Violations -> contingencies",
 
     "Equipment": "Equipment",
-    "Constraint": "Constraint",
     "EquipmentType": "Equipment type",
     "selectionType": "Selection type",
 
