--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1133,7 +1133,7 @@
 
     "SLDOpenedInTheGrid": "Le {diagramType} \"{equipmentId}\" a été ouvert dans la grille des images",
     "NADOpenedInTheGrid": "L'image nodale de zone \"{elementId}\" a été ouverte dans la grille des images",
-    "generatedNADOpenedInTheGrid": "L'image nodale de zone générée a été ouverte dans la grille des images",
+    "generatedNADOpenedInTheGrid": "L'image nodale de zone générée est en cours d'ouverture dans la grille des images",
 
     "dialog.button.leave": "Quitter",
 
@@ -1543,7 +1543,6 @@
     "expand": "Étendre",
     "expandAllVoltageLevels": "Étendre tous les postes",
     "addVoltageLevel": "Ajouter un poste",
-    "tooManyVoltageLevels": "Trop de postes",
     "hide": "Masquer",
     "hideLabels": "Masquer les libellés en mode edition",
     "showLabels": "Afficher les libellés",
