other settable_to_none fields
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -81,6 +81,7 @@
     "images": "Images",
     "NetworkVisualizations": "Network visualizations",
     "None": "None",
+    "NumericValueOrNone": "Numeric value or None",
     "NoneUpcomingOverload": "None",
     "Feeders": "Feeder",
     "NominalVoltage": "Nominal voltage",
