--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1045,7 +1045,7 @@
     "NoSpreadsheets": "Vous n'avez pas de feuille de calcul, veuillez en créer une",
 
     "LookForEquipmentField": "Rechercher un champ",
-    "EquipmentSchemaPopoverSchema": "Ouvre la liste des champs pour l'équipement associé à la feuille, la list peut également être ouverte via une double pression de la touche Shift du clavier.",
+    "EquipmentSchemaPopoverSchema": "Ouvre la liste des champs pour l'équipement associé à la feuille, la liste peut également être ouverte via une double pression de la touche Shift du clavier.",
     "FetchingEquipmentSchemaError": "Une erreur est survenue lors de la récupération du schéma d'un équipement",
 
     "depth": "Profondeur : ",
