code review part 2

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1605,7 +1605,7 @@
     "MOVE_VOLTAGE_LEVEL_FEEDER_BAYS": "Move connections",
     "TOP": "TOP",
     "BOTTOM": "BOTTOM",
-    "DuplicatedPositionsError": "Duplicated position error",
+    "DuplicatedPositionsError": "Duplicate number",
     "MissingConnectionsInVoltageLevel": "Missing connections in voltage level",
     "ConnectionsRemovedFromList": "Connections removed from list on validation"
 }
