--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -477,6 +477,7 @@
     "LossFactor": "Loss Factor",
     "StopComputation": "Stop computation",
     "genericConfirmQuestion": "You are about to leave without saving your current modifications.",
+    "launchComputationConfirmQuestion": "Vous êtes sur le point de lancer un calcul alors qu'une modification des paramètres de calcul est en cours.",
 
     "ViewOnSpreadsheet": "View in spreadsheet",
     "DeleteFromMenu": "Delete",
@@ -1242,6 +1243,7 @@
     "marginalCost": "Startup cost",
 
     "dialog.button.leave": "Leave",
+    "dialog.button.launch": "Launch",
 
     "Connect": "Reconnect ?",
     "connected1": "Connected 1",
