--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -81,7 +81,9 @@
     "images": "Images",
     "NetworkVisualizations": "Network visualizations",
     "None": "None",
+    "EmptyField": "Empty the field",
     "NumericValueOrNone": "Numeric value or None",
+    "ValueOrEmptyField": "Value or empty the field",
     "NoneUpcomingOverload": "None",
     "Feeders": "Feeder",
     "NominalVoltage": "Nominal voltage",
