--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -81,7 +81,9 @@
     "images": "Images",
     "NetworkVisualizations": "Images réseau",
     "None": "Aucun",
+    "EmptyField": "Vider le champs",
     "NumericValueOrNone": "Valeur numérique ou Aucun",
+    "ValueOrEmptyField": "Valeur ou Vider le champs",
     "NoneUpcomingOverload": "Aucune",
     "Feeders": "Départs",
     "NominalVoltage": "Tension nominale",
