adjust text , store layout diagram button
Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1560,9 +1560,10 @@
     "MapCardNotAvailable": "Map is not available",
     "AddNewCard": "Images",
     "Display": "Display",
-    "SaveGridLayout": "Save",
+    "StoreDiagramLayout": "Store",
+    "StoreButtonTooltip": "Store diagram layout in the study",
     "GridLayoutPanelSaveError": "An error occurred while saving the grid layout panel",
-    "GridLayoutPanelSaveSuccess": "Grid layout panel saved successfully",
+    "DiagramLayoutStoreSuccess": "Diagrams successfully stored",
     "MaxNumberOfNadDiagramsReached": "You need to close at least one network area diagram to open a new one",
     "NoMatch": "No match",
     "Rows": "row",
