--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1556,9 +1556,10 @@
     "MapCardNotAvailable": "La carte n'est pas disponible",
     "AddNewCard": "Images",
     "Display": "Affichage",
-    "SaveGridLayout": "Enregistrer",
+    "StoreDiagramLayout": "Mémoriser",
+    "StoreButtonTooltip": "Mémoriser la disposition des images dans l'étude",
     "GridLayoutPanelSaveError": "Une erreur est survenue lors de l'enregistrement de la grille du diagramme",
-    "GridLayoutPanelSaveSuccess": "La grille des diagrammes a été enregistrée avec succès",
+    "DiagramLayoutStoreSuccess": "Images mémorisées avec succès",
     "MaxNumberOfNadDiagramsReached": "Vous devez fermer au moins une image nodale existante pour en ouvrir une nouvelle",
     "NoMatch": "Pas de correspondance",
     "Rows": "ligne",
