adjust text , store layout diagram button (#3268)
* adjust text , store layout diagram button
 
---------

Signed-off-by: SOUISSI Maissa (Externe) <souissimai@gm0winl878.bureau.si.interne>

--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -1559,9 +1559,10 @@
     "MapCardNotAvailable": "La carte n'est pas disponible",
     "AddNewCard": "Images",
     "Display": "Affichage",
-    "SaveGridLayout": "Enregistrer",
-    "GridLayoutPanelSaveError": "Une erreur est survenue lors de l'enregistrement de la grille du diagramme",
-    "GridLayoutPanelSaveSuccess": "La grille des diagrammes a été enregistrée avec succès",
+    "StoreDiagramLayout": "Mémoriser",
+    "StoreButtonTooltip": "Mémoriser la disposition des images dans l'étude",
+    "DiagramLayoutStoreError": "Une erreur s'est produite lors de la mémorisation des images",
+    "DiagramLayoutStoreSuccess": "Images mémorisées avec succès",
     "MaxNumberOfNadDiagramsReached": "Vous devez fermer au moins une image nodale existante pour en ouvrir une nouvelle",
     "NoMatch": "Pas de correspondance",
     "Rows": "ligne",
