--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1563,9 +1563,10 @@
     "MapCardNotAvailable": "Map is not available",
     "AddNewCard": "Images",
     "Display": "Display",
-    "SaveGridLayout": "Save",
-    "GridLayoutPanelSaveError": "An error occurred while saving the grid layout panel",
-    "GridLayoutPanelSaveSuccess": "Grid layout panel saved successfully",
+    "StoreDiagramLayout": "Store",
+    "StoreButtonTooltip": "Store diagram layout in the study",
+    "DiagramLayoutStoreError": "An error occured when storing the diagrams",
+    "DiagramLayoutStoreSuccess": "Diagrams successfully stored",
     "MaxNumberOfNadDiagramsReached": "You need to close at least one network area diagram to open a new one",
     "NoMatch": "No match",
     "Rows": "row",
