--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,6 +2,7 @@
     "debug.message.downloadFile": "Computation data will be downloaded upon its completion.",
     "debug.header.fileNotFound": "Computation data not found",
     "debug.header.fileError": "Computation data download failed",
+    "export.message.subscribed": "You will be notified when the export is ready.",
 
     "button.delete": "Delete",
     "button.continue": "Continue",
