--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -2,6 +2,7 @@
     "debug.message.downloadFile": "À la fin du calcul ses données seront téléchargées.",
     "debug.header.fileNotFound": "Données de calcul non trouvées",
     "debug.header.fileError": "Échec du téléchargement des données de calcul",
+    "export.message.subscribed": "Vous serez notifié lorsque l'export sera prêt.",
 
     "button.delete": "Supprimer",
     "button.continue": "Continuer",
