--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,6 +3,7 @@
     "debug.header.fileNotFound": "Computation data not found",
     "debug.header.fileError": "Computation data download failed",
     "export.message.subscribed": "You will be notified when the export is ready.",
+    "export.message.downloadStarted": "Starting download...",
 
     "button.delete": "Delete",
     "button.continue": "Continue",
